crates/slidx_render/tests/snapshots/themes__contrast-dark.snap
---
source: crates/slidx_render/tests/themes.rs
expression: declarations(dark)
---
- "--slidx-color-accent: #8cc5ff"
- "--slidx-color-border: #262626"
- "--slidx-color-canvas: #000000"
- "--slidx-color-code-comment: #adc5df"
- "--slidx-color-code-keyword: #9ec6ff"
- "--slidx-color-code-number: #f6b676"
- "--slidx-color-code-punctuation: #c2c2c2"
- "--slidx-color-code-string: #89d399"
- "--slidx-color-code-surface: #0d0d0d"
- "--slidx-color-code-text: #ffffff"
- "--slidx-color-code-type: #f0ade9"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #969696"
- "--slidx-color-surface: #040404"
- "--slidx-color-text: #ffffff"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
