crates/slidx_render/tests/snapshots/themes__contrast.snap
---
source: crates/slidx_render/tests/themes.rs
expression: "declarations(&slide_for(&theme.id, \"full\"))"
---
- "--slidx-color-accent: #005ca0"
- "--slidx-color-accent: #90c7ff"
- "--slidx-color-border: #333333"
- "--slidx-color-border: #cacaca"
- "--slidx-color-canvas: #020202"
- "--slidx-color-canvas: #e6e6e6"
- "--slidx-color-code-comment: #384d63"
- "--slidx-color-code-comment: #b1cae3"
- "--slidx-color-code-keyword: #224b87"
- "--slidx-color-code-keyword: #a4c9ff"
- "--slidx-color-code-number: #704000"
- "--slidx-color-code-number: #fab979"
- "--slidx-color-code-punctuation: #4b4b4b"
- "--slidx-color-code-punctuation: #c6c6c6"
- "--slidx-color-code-string: #015826"
- "--slidx-color-code-string: #8dd79d"
- "--slidx-color-code-surface: #181818"
- "--slidx-color-code-surface: #eeeeee"
- "--slidx-color-code-text: #070707"
- "--slidx-color-code-text: #ffffff"
- "--slidx-color-code-type: #70366b"
- "--slidx-color-code-type: #f4b0ed"
- "--slidx-color-heading: #010101"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #828282"
- "--slidx-color-muted: #989898"
- "--slidx-color-surface: #0d0d0d"
- "--slidx-color-surface: #ffffff"
- "--slidx-color-text: #070707"
- "--slidx-color-text: #ffffff"
- "--slidx-font-mono: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Roboto Mono', 'Noto Sans Mono CJK JP', monospace"
- "--slidx-font-sans: system-ui, -apple-system, 'Segoe UI', 'Helvetica Neue', 'Hiragino Sans', 'Noto Sans JP', 'Yu Gothic UI', sans-serif"
- "--slidx-hairline: 1px"
- "--slidx-radius: 0px"
- "--slidx-size-body: 3.5185cqh"
- "--slidx-size-caption: 2.8148cqh"
- "--slidx-size-code: 3.3426cqh"
- "--slidx-size-heading-1: 6.8721cqh"
- "--slidx-size-heading-2: 5.4977cqh"
- "--slidx-size-heading-3: 4.3981cqh"
- "--slidx-space-block: 2.9630cqh"
- "--slidx-space-padding: 8.1481cqh"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
