crates/slidx_render/tests/snapshots/themes__editorial-dark.snap
---
source: crates/slidx_render/tests/themes.rs
expression: declarations(dark)
---
- "--slidx-color-accent: #ffc7a2"
- "--slidx-color-border: #60564f"
- "--slidx-color-canvas: #221a14"
- "--slidx-color-code-comment: #f7d7c2"
- "--slidx-color-code-keyword: #c8deff"
- "--slidx-color-code-number: #ffd5ae"
- "--slidx-color-code-punctuation: #e7dbd4"
- "--slidx-color-code-string: #a3eeb2"
- "--slidx-color-code-surface: #423832"
- "--slidx-color-code-text: #f8ece4"
- "--slidx-color-code-type: #ffcefa"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #b0a59d"
- "--slidx-color-surface: #352c26"
- "--slidx-color-text: #f8ece4"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
