crates/slidx_render/tests/snapshots/themes__editorial.snap
---
source: crates/slidx_render/tests/themes.rs
expression: "declarations(&slide_for(&theme.id, \"full\"))"
---
- "--slidx-color-accent: #844100"
- "--slidx-color-accent: #ffba8b"
- "--slidx-color-border: #4c433d"
- "--slidx-color-border: #cec1b9"
- "--slidx-color-canvas: #120a06"
- "--slidx-color-canvas: #eaddd4"
- "--slidx-color-code-comment: #593f2e"
- "--slidx-color-code-comment: #e9c9b5"
- "--slidx-color-code-keyword: #1b447f"
- "--slidx-color-code-keyword: #b2d1ff"
- "--slidx-color-code-number: #673b00"
- "--slidx-color-code-number: #ffc48b"
- "--slidx-color-code-punctuation: #4e433c"
- "--slidx-color-code-punctuation: #dacec6"
- "--slidx-color-code-string: #005122"
- "--slidx-color-code-string: #96e0a5"
- "--slidx-color-code-surface: #302721"
- "--slidx-color-code-surface: #f2e5dd"
- "--slidx-color-code-text: #291f19"
- "--slidx-color-code-text: #f8ece4"
- "--slidx-color-code-type: #692f65"
- "--slidx-color-code-type: #febaf7"
- "--slidx-color-heading: #1a120c"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #867a73"
- "--slidx-color-muted: #a79b94"
- "--slidx-color-surface: #231b15"
- "--slidx-color-surface: #fff6f1"
- "--slidx-color-text: #291f19"
- "--slidx-color-text: #f8ece4"
- "--slidx-font-mono: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Roboto Mono', 'Noto Sans Mono CJK JP', monospace"
- "--slidx-font-sans: system-ui, -apple-system, 'Segoe UI', 'Helvetica Neue', 'Hiragino Sans', 'Noto Sans JP', 'Yu Gothic UI', sans-serif"
- "--slidx-hairline: 1px"
- "--slidx-radius: 0px"
- "--slidx-size-body: 3.1481cqh"
- "--slidx-size-caption: 2.3617cqh"
- "--slidx-size-code: 2.9907cqh"
- "--slidx-size-heading-1: 7.4567cqh"
- "--slidx-size-heading-2: 5.5939cqh"
- "--slidx-size-heading-3: 4.1965cqh"
- "--slidx-space-block: 2.9630cqh"
- "--slidx-space-padding: 10.3704cqh"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
