crates/slidx_render/tests/snapshots/themes__layout-quad.snap
---
source: crates/slidx_render/tests/themes.rs
expression: "regions(&slide_for(\"minimal\", &layout.id))"
---
- "<div class=\"slidx-region\" data-slidx-region=\"top-left\""
- "<div class=\"slidx-block\" data-slidx-block=\"0\" data-slidx-width=\"full\""
- "<div class=\"slidx-block\" data-slidx-block=\"1\""
- "<div class=\"slidx-block\" data-slidx-block=\"2\""
- "<div class=\"slidx-block\" data-slidx-block=\"3\""
- "<div class=\"slidx-region\" data-slidx-region=\"top-right\""
- "<div class=\"slidx-region\" data-slidx-region=\"bottom-left\""
- "<div class=\"slidx-region\" data-slidx-region=\"bottom-right\""
