crates/slidx_render/tests/snapshots/themes__minimal-dark.snap
---
source: crates/slidx_render/tests/themes.rs
expression: declarations(dark)
---
- "--slidx-color-accent: #b6d4ff"
- "--slidx-color-border: #51565c"
- "--slidx-color-canvas: #161a1f"
- "--slidx-color-code-comment: #c9dcf9"
- "--slidx-color-code-keyword: #c5ddff"
- "--slidx-color-code-number: #ffd3a9"
- "--slidx-color-code-punctuation: #d6dbe3"
- "--slidx-color-code-string: #a1ecb0"
- "--slidx-color-code-surface: #34383e"
- "--slidx-color-code-text: #eaeff7"
- "--slidx-color-code-type: #ffcbf9"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #a1a6ad"
- "--slidx-color-surface: #282c31"
- "--slidx-color-text: #eaeff7"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
