crates/slidx_render/tests/snapshots/themes__minimal.snap
---
source: crates/slidx_render/tests/themes.rs
expression: "declarations(&slide_for(&theme.id, \"full\"))"
---
- "--slidx-color-accent: #1755aa"
- "--slidx-color-accent: #b6d4ff"
- "--slidx-color-border: #51565c"
- "--slidx-color-border: #c1c8d1"
- "--slidx-color-canvas: #161a1f"
- "--slidx-color-canvas: #dde3ed"
- "--slidx-color-code-comment: #394961"
- "--slidx-color-code-comment: #c9dcf9"
- "--slidx-color-code-keyword: #1f4884"
- "--slidx-color-code-keyword: #c5ddff"
- "--slidx-color-code-number: #6c3e00"
- "--slidx-color-code-number: #ffd3a9"
- "--slidx-color-code-punctuation: #434950"
- "--slidx-color-code-punctuation: #d6dbe3"
- "--slidx-color-code-string: #005524"
- "--slidx-color-code-string: #a1ecb0"
- "--slidx-color-code-surface: #34383e"
- "--slidx-color-code-surface: #e5ecf5"
- "--slidx-color-code-text: #1b2026"
- "--slidx-color-code-text: #eaeff7"
- "--slidx-color-code-type: #6d3369"
- "--slidx-color-code-type: #ffcbf9"
- "--slidx-color-heading: #0d1218"
- "--slidx-color-heading: #ffffff"
- "--slidx-color-muted: #7a8089"
- "--slidx-color-muted: #a1a6ad"
- "--slidx-color-surface: #282c31"
- "--slidx-color-surface: #fafcff"
- "--slidx-color-text: #1b2026"
- "--slidx-color-text: #eaeff7"
- "--slidx-font-mono: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, 'Roboto Mono', 'Noto Sans Mono CJK JP', monospace"
- "--slidx-font-sans: system-ui, -apple-system, 'Segoe UI', 'Helvetica Neue', 'Hiragino Sans', 'Noto Sans JP', 'Yu Gothic UI', sans-serif"
- "--slidx-hairline: 1px"
- "--slidx-leading-body: 1.500"
- "--slidx-leading-body: 1.700"
- "--slidx-leading-caption: 1.616"
- "--slidx-leading-caption: 1.816"
- "--slidx-leading-code: 1.500"
- "--slidx-leading-code: 1.700"
- "--slidx-leading-heading-1: 1.152"
- "--slidx-leading-heading-1: 1.352"
- "--slidx-leading-heading-2: 1.268"
- "--slidx-leading-heading-2: 1.468"
- "--slidx-leading-heading-3: 1.384"
- "--slidx-leading-heading-3: 1.584"
- "--slidx-measure-heading: 13.0em"
- "--slidx-measure-prose: 30.0em"
- "--slidx-radius: 0px"
- "--slidx-size-body: 2.9630cqh"
- "--slidx-size-caption: 2.3704cqh"
- "--slidx-size-code: 2.9630cqh"
- "--slidx-size-heading-1: 5.7870cqh"
- "--slidx-size-heading-2: 4.6296cqh"
- "--slidx-size-heading-3: 3.7037cqh"
- "--slidx-space-block: 2.5926cqh"
- "--slidx-space-padding: 8.8889cqh"
- "--slidx-tracking-body: normal"
- "--slidx-tracking-caption: 0.0049em"
- "--slidx-tracking-caption: normal"
- "--slidx-tracking-code: normal"
- "--slidx-tracking-heading-1: -0.0147em"
- "--slidx-tracking-heading-1: normal"
- "--slidx-tracking-heading-2: -0.0098em"
- "--slidx-tracking-heading-2: normal"
- "--slidx-tracking-heading-3: -0.0049em"
- "--slidx-tracking-heading-3: normal"
- "grid-template-areas: \"body\""
- "grid-template-areas: \"left right\""
- "grid-template-areas: \"main side\""
- "grid-template-areas: \"title\" \"body\""
- "grid-template-areas: \"top-left top-right\" \"bottom-left bottom-right\""
